did refactoring after running code inspection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:theme="@style/DetailActivityTheme">
         </activity>
 
-        <activity android:name=".NetworkErrorActivity"></activity>
+        <activity android:name=".NetworkErrorActivity"/>
     </application>
 
 </manifest>
