--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
+    // CardView
+    implementation 'com.android.support:cardview-v7:27.1.1'
+
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
