--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "API_KEY", themovie_api_key
+        buildConfigField "String", "YOUTUBE_API_KEY", YOUTUBE_API_KEY
     }
     buildTypes {
         release {
@@ -20,22 +21,18 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
     // CardView
     implementation 'com.android.support:cardview-v7:27.1.1'
-
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:design:27.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     //Room
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-
-
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
