--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,14 @@
             android:name=".DetailActivity"
             android:label="@string/detail_activity_name"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/DetailActivityTheme"></activity>
+            android:theme="@style/DetailActivityTheme" />
         <activity android:name=".NetworkErrorActivity" />
         <activity
             android:name=".TrailerActivity"
             android:label="@string/title_activity_trailer"
             android:parentActivityName=".DetailActivity"
-            android:theme="@style/DetailActivityTheme"></activity>
+            android:theme="@style/DetailActivityTheme" />
+        <activity android:name=".TrailerYoutubePalyerActivity"></activity>
     </application>
 
 </manifest>
