--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +30,7 @@
             android:label="@string/title_activity_trailer"
             android:parentActivityName=".DetailActivity"
             android:theme="@style/DetailActivityTheme" />
-        <activity android:name=".YoutubeTrailerPlayerActivity"></activity>
+        <activity android:name=".YoutubeTrailerPlayerActivity"/>
     </application>
 
 </manifest>
