--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,10 @@ dependencies {
     //Room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation "android.arch.lifecycle:livedata:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
